bug overflow-y issues back to Paul's former code

--- a/gapelia-core/src/main/webapp/static/css/_editor.scss
+++ b/gapelia-core/src/main/webapp/static/css/_editor.scss
@@ -564,14 +564,8 @@
 					.image-attribution { right: 0; }
 				}
 
-				.phototext-preview-wrapper, .vertical-preview-wrapper, .video-preview-wrapper {
+				.phototext-preview-wrapper, .vertical-preview-wrapper, .video-preview-wrapper {          
 					.image-attribution { left: 0; }
-
-					.page-desc {
-						overflow-x: hidden;
-						overflow-y: auto;
-						// padding: 0 1rem 1rem 0;
-					}
 				}
 
 				.scroller-wrapper {
@@ -618,6 +612,7 @@
 				.fluid-preview-wrapper {
 					background-color: $white;
 					height: 100%;
+          overflow-y: auto;
 
 					.button-wrapper, section, .fluid-preview { transition: all 0.2s ease; }
 
@@ -810,6 +805,10 @@
 				}
 
 				.phototext-preview-wrapper {
+          //overflow-y: auto;
+          height: 100%;
+          background-color: #e7e7e7;
+          
 					.button-wrapper {
 						bottom: 45% !important; //
 						width: 80% !important; //
@@ -894,7 +893,8 @@
 						width: 100%; height: 100%;
 
 						background-color: $white;
-						position: absolute;
+            overflow-y: auto;
+            position: absolute;
 					}
 
 					.image-attribution { visibility: hidden; }
@@ -904,7 +904,7 @@
 						top: 0; right: 0;
 
 						color: $black;
-						overflow-y: auto;
+						//overflow-y: auto;
 						padding: 4rem 2rem 2rem 2rem;
 						position: absolute;
 
@@ -930,7 +930,7 @@
 						width: 70%; height: 100%;
 						top: 0; left: 0;
 
-						position: absolute;
+						position: fixed !important ;
 
 						iframe {
 							width: 100%; height: 100%;
